--- a/po/guix/fr.po
+++ b/po/guix/fr.po
@@ -9,6 +9,7 @@
 # Philippe SWARTVAGHER <phil.swart@gmx.fr>, 2021.
 # Aurelien Coussat <acoussat@mail.fr>, 2022.
 # grimst <grimaitres@gmail.com>, 2023.
+# Florian Pelz <pelzflorian@pelzflorian.de>, 2023.
 #
 # Note de Frédéric Marchal: Le nom « shepherd » est le nom d'un démon (voir
 # https://www.gnu.org/software/shepherd/). Je ne l'ai pas traduit dans les
@@ -24,15 +25,15 @@ msgstr ""
 "Project-Id-Version: guix 1.2.0-pre3\n"
 "Report-Msgid-Bugs-To: bug-guix@gnu.org\n"
 "POT-Creation-Date: 2023-06-19 03:18+0000\n"
-"PO-Revision-Date: 2023-06-30 12:31+0200\n"
-"Last-Translator: Julien Lepiller <fedora-account@lepiller.eu>\n"
+"PO-Revision-Date: 2023-07-30 12:21+0000\n"
+"Last-Translator: Florian Pelz <pelzflorian@pelzflorian.de>\n"
 "Language-Team: French <https://translate.fedoraproject.org/projects/guix/guix/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.17\n"
+"X-Generator: Weblate 4.18.2\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 
 #: gnu.scm:81
