--- a/po/guix/pt_BR.po
+++ b/po/guix/pt_BR.po
@@ -8,21 +8,22 @@
 # Fábio Rodrigues Ribeiro <farribeiro@gmail.com>, 2022, 2023.
 # Felipe Nogueira <contato.fnog@gmail.com>, 2023.
 # Edino Tavares Moniz <onidemon37@protonmail.com>, 2023.
+# Florian Pelz <pelzflorian@pelzflorian.de>, 2023.
 #: guix/diagnostics.scm:159
 msgid ""
 msgstr ""
 "Project-Id-Version: guix 1.2.0-pre1\n"
 "Report-Msgid-Bugs-To: bug-guix@gnu.org\n"
 "POT-Creation-Date: 2023-06-19 03:18+0000\n"
-"PO-Revision-Date: 2023-06-30 12:47+0200\n"
-"Last-Translator: Edino Tavares Moniz <onidemon37@protonmail.com>\n"
+"PO-Revision-Date: 2023-07-30 12:21+0000\n"
+"Last-Translator: Florian Pelz <pelzflorian@pelzflorian.de>\n"
 "Language-Team: Portuguese (Brazil) <https://translate.fedoraproject.org/projects/guix/guix/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.17\n"
+"X-Generator: Weblate 4.18.2\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 
 #: gnu.scm:81
