--- a/po/guix/sk.po
+++ b/po/guix/sk.po
@@ -3,21 +3,22 @@
 # This file is distributed under the same license as the GNU guix package.
 # Marek Felšöci <marek@felsoci.sk>, 2021, 2022, 2023.
 # Rostislav Svoboda <Rostislav.Svoboda@gmail.com>, 2022.
+# Florian Pelz <pelzflorian@pelzflorian.de>, 2023.
 #: guix/diagnostics.scm:159
 msgid ""
 msgstr ""
 "Project-Id-Version: GNU guix\n"
 "Report-Msgid-Bugs-To: bug-guix@gnu.org\n"
 "POT-Creation-Date: 2023-06-19 03:18+0000\n"
-"PO-Revision-Date: 2023-06-30 12:48+0200\n"
-"Last-Translator: Marek Felšöci <marek@felsoci.sk>\n"
+"PO-Revision-Date: 2023-07-30 12:21+0000\n"
+"Last-Translator: Florian Pelz <pelzflorian@pelzflorian.de>\n"
 "Language-Team: Slovak <https://translate.fedoraproject.org/projects/guix/guix/sk/>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Weblate 4.15.2\n"
+"X-Generator: Weblate 4.18.2\n"
 
 #: gnu.scm:81
 #, scheme-format
@@ -4857,7 +4858,7 @@ msgstr "vyvolať zberača odpadkov"
 
 #: guix/scripts/gc.scm:264
 msgid "already ~,2h MiBs available on ~a, nothing to do~%"
-msgstr "na ~a už je ~,2h MiB voľného miesta, žiadna činnosť sa nevyžaduje~%"
+msgstr "na ~*~a už je ~@*~,2h MiB voľného miesta, žiadna činnosť sa nevyžaduje~%"
 
 #: guix/scripts/gc.scm:267
 msgid "freeing ~,2h MiBs~%"
