doc: cookbook: Add 'use-modules' in gexp example.
* doc/guix-cookbook.texi (A Scheme Crash Course): Add 'use-modules' line
in gexp example.

--- a/doc/guix-cookbook.texi
+++ b/doc/guix-cookbook.texi
@@ -280,6 +280,9 @@ they provide code to be executed during the package build process.  They
 look like this:
 
 @lisp
+(use-modules (guix gexp)           ;so we can write gexps
+             (gnu packages base))  ;for 'coreutils'
+
 ;; Below is a G-expression representing staged code.
 #~(begin
     ;; Invoke 'ls' from the package defined by the 'coreutils'
