--- a/doc/guix-cookbook.texi
+++ b/doc/guix-cookbook.texi
@@ -78,7 +78,7 @@ manual}).
 * Containers::                  Isolated environments and nested systems
 * Advanced package management::  Power to the users!
 * Environment management::      Control environment
-* Installing Guix on a Cluster:: High-performance computing.
+* Installing Guix on a Cluster::  High-performance computing.
 
 * Acknowledgments::             Thanks!
 * GNU Free Documentation License::  The license of this document.
@@ -87,36 +87,85 @@ manual}).
 @detailmenu
  --- The Detailed Node Listing ---
 
+Scheme tutorials
+
+* A Scheme Crash Course::
+
 Packaging
 
-* Packaging Tutorial::         A tutorial on how to add packages to Guix.
+* Packaging Tutorial::          A tutorial on how to add packages to Guix.
+
+Packaging Tutorial
+
+* A ``Hello World'' package::
+* Setup::
+* Extended example::
+* Other build systems::
+* Programmable and automated package definition::
+* Getting help::
+* Conclusion::
+* References::
+
+Setup
+
+* Local file::
+* Channels::
+* Direct checkout hacking::
+
+Programmable and automated package definition
+
+* Recursive importers::
+* Automatic update::
+* Inheritance::
 
 System Configuration
 
-* Auto-Login to a Specific TTY:: Automatically Login a User to a Specific TTY
-* Customizing the Kernel::       Creating and using a custom Linux kernel on Guix System.
-* Guix System Image API::        Customizing images to target specific platforms.
-* Using security keys::          How to use security keys with Guix System.
+* Auto-Login to a Specific TTY::  Automatically Login a User to a Specific TTY
+* Customizing the Kernel::      Creating and using a custom Linux kernel on Guix System.
+* Guix System Image API::       Customizing images to target specific platforms.
+* Using security keys::         How to use security keys with Guix System.
 * Connecting to Wireguard VPN::  Connecting to a Wireguard VPN.
-* Customizing a Window Manager:: Handle customization of a Window manager on Guix System.
-* Running Guix on a Linode Server:: Running Guix on a Linode Server
-* Setting up a bind mount:: Setting up a bind mount in the file-systems definition.
-* Getting substitutes from Tor:: Configuring Guix daemon to get substitutes through Tor.
-* Setting up NGINX with Lua:: Configuring NGINX web-server to load Lua modules.
-* Music Server with Bluetooth Audio:: Headless music player with Bluetooth output.
+* Customizing a Window Manager::  Handle customization of a Window manager on Guix System.
+* Running Guix on a Linode Server:: Running Guix on a Linode Server.  Running Guix on a Linode Server
+* Setting up a bind mount::     Setting up a bind mount in the file-systems definition.
+* Getting substitutes from Tor::  Configuring Guix daemon to get substitutes through Tor.
+* Setting up NGINX with Lua::   Configuring NGINX web-server to load Lua modules.
+* Music Server with Bluetooth Audio::  Headless music player with Bluetooth output.
+
+Customizing a Window Manager
+
+* StumpWM::
+* Session lock::
+
+Session lock
+
+* Xorg::
 
 Containers
 
-* Guix Containers::            Perfectly isolated environments
-* Guix System Containers::     A system inside your system
+* Guix Containers::             Perfectly isolated environments
+* Guix System Containers::      A system inside your system
+
+Guix System Containers
+
+* A Database Container::
+* Container Networking::
 
 Advanced package management
 
-* Guix Profiles in Practice::     Strategies for multiple profiles and manifests.
+* Guix Profiles in Practice::   Strategies for multiple profiles and manifests.
+
+Guix Profiles in Practice
+
+* Basic setup with manifests::
+* Required packages::
+* Default profile::
+* The benefits of manifests::
+* Reproducible profiles::
 
 Environment management
 
-* Guix environment via direnv:: Setup Guix environment with direnv
+* Guix environment via direnv::  Setup Guix environment with direnv
 
 Installing Guix on a Cluster
 
@@ -143,6 +192,10 @@ advanced features Guix provides --- and you don't even need to be an
 experienced programmer to use them!
 
 Let's get started!
+
+@menu
+* A Scheme Crash Course::
+@end menu
 
 @node A Scheme Crash Course
 @section A Scheme Crash Course
@@ -430,7 +483,7 @@ definitions in Guile Scheme, organizing them in package modules, and building
 them.
 
 @menu
-* Packaging Tutorial::         A tutorial on how to add packages to Guix.
+* Packaging Tutorial::          A tutorial on how to add packages to Guix.
 @end menu
 
 @node Packaging Tutorial
@@ -471,6 +524,17 @@ The following tutorial covers all the basics around package creation with Guix.
 It does not assume much knowledge of the Guix system nor of the Lisp language.
 The reader is only expected to be familiar with the command line and to have some
 basic programming knowledge.
+
+@menu
+* A ``Hello World'' package::
+* Setup::
+* Extended example::
+* Other build systems::
+* Programmable and automated package definition::
+* Getting help::
+* Conclusion::
+* References::
+@end menu
 
 @node A ``Hello World'' package
 @subsection A ``Hello World'' package
@@ -676,6 +740,12 @@ We recommend you work directly on the Guix source checkout since it makes it
 easier for everyone to contribute to the project.
 
 But first, let's look at other possibilities.
+
+@menu
+* Local file::
+* Channels::
+* Direct checkout hacking::
+@end menu
 
 @node Local file
 @subsubsection Local file
@@ -1327,6 +1397,12 @@ empowers us in ways that reach far beyond traditional package management.
 
 Let's illustrate this with some awesome features of Guix!
 
+@menu
+* Recursive importers::
+* Automatic update::
+* Inheritance::
+@end menu
+
 @node Recursive importers
 @subsubsection Recursive importers
 
@@ -1490,17 +1566,17 @@ chapter is to demonstrate some advanced configuration concepts.
 reference.
 
 @menu
-* Auto-Login to a Specific TTY:: Automatically Login a User to a Specific TTY
-* Customizing the Kernel::       Creating and using a custom Linux kernel on Guix System.
-* Guix System Image API::        Customizing images to target specific platforms.
-* Using security keys::          How to use security keys with Guix System.
+* Auto-Login to a Specific TTY::  Automatically Login a User to a Specific TTY
+* Customizing the Kernel::      Creating and using a custom Linux kernel on Guix System.
+* Guix System Image API::       Customizing images to target specific platforms.
+* Using security keys::         How to use security keys with Guix System.
 * Connecting to Wireguard VPN::  Connecting to a Wireguard VPN.
-* Customizing a Window Manager:: Handle customization of a Window manager on Guix System.
-* Running Guix on a Linode Server:: Running Guix on a Linode Server
-* Setting up a bind mount:: Setting up a bind mount in the file-systems definition.
-* Getting substitutes from Tor:: Configuring Guix daemon to get substitutes through Tor.
-* Setting up NGINX with Lua:: Configuring NGINX web-server to load Lua modules.
-* Music Server with Bluetooth Audio:: Headless music player with Bluetooth output.
+* Customizing a Window Manager::  Handle customization of a Window manager on Guix System.
+* Running Guix on a Linode Server:: Running Guix on a Linode Server.  Running Guix on a Linode Server
+* Setting up a bind mount::     Setting up a bind mount in the file-systems definition.
+* Getting substitutes from Tor::  Configuring Guix daemon to get substitutes through Tor.
+* Setting up NGINX with Lua::   Configuring NGINX web-server to load Lua modules.
+* Music Server with Bluetooth Audio::  Headless music player with Bluetooth output.
 @end menu
 
 @node Auto-Login to a Specific TTY
@@ -2137,6 +2213,11 @@ this post by thaller}.
 @section Customizing a Window Manager
 @cindex wm
 
+@menu
+* StumpWM::
+* Session lock::
+@end menu
+
 @node StumpWM
 @subsection StumpWM
 @cindex stumpwm
@@ -2191,6 +2272,10 @@ Depending on your environment, locking the screen of your session might come bui
 or it might be something you have to set up yourself. If you use a desktop environment
 like GNOME or KDE, it's usually built in. If you use a plain window manager like
 StumpWM or EXWM, you might have to set it up yourself.
+
+@menu
+* Xorg::
+@end menu
 
 @node Xorg
 @subsubsection Xorg
@@ -2855,8 +2940,8 @@ from foreign libraries or configuration files that are available
 system-wide.
 
 @menu
-* Guix Containers::            Perfectly isolated environments
-* Guix System Containers::     A system inside your system
+* Guix Containers::             Perfectly isolated environments
+* Guix System Containers::      A system inside your system
 @end menu
 
 @node Guix Containers
@@ -3039,6 +3124,11 @@ contexts---configuration files, dedicated user accounts, directories for
 caches or log files, etc.  In Guix System the demands of this kind of
 software are satisfied through the deployment of system services.
 
+
+@menu
+* A Database Container::
+* Container Networking::
+@end menu
 
 @node A Database Container
 @subsection A Database Container
@@ -3242,7 +3332,7 @@ concepts.
 reference.
 
 @menu
-* Guix Profiles in Practice::     Strategies for multiple profiles and manifests.
+* Guix Profiles in Practice::   Strategies for multiple profiles and manifests.
 @end menu
 
 @node Guix Profiles in Practice
@@ -3320,6 +3410,14 @@ Games.
 @end itemize
 
 Let's dive in the set up!
+
+@menu
+* Basic setup with manifests::
+* Required packages::
+* Default profile::
+* The benefits of manifests::
+* Reproducible profiles::
+@end menu
 
 @node Basic setup with manifests
 @subsection Basic setup with manifests
@@ -3635,7 +3733,7 @@ Guix provides multiple tools to manage environment.  This chapter
 demonstrate such utilities.
 
 @menu
-* Guix environment via direnv:: Setup Guix environment with direnv
+* Guix environment via direnv::  Setup Guix environment with direnv
 @end menu
 
 @node Guix environment via direnv
